--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ footer p{
 /* GALLERY PAGE */
 .container{
     width: 100%;
-    height: 80rem;
+    height: 65rem;
 }
 .container h1{
     text-align: center;
@@ -151,7 +151,7 @@ footer p{
     flex-wrap: wrap;
 }
 .container_card img{
-    margin: 30px 10px 5px 40px;
+    margin: 30px 10px 15px;
     width: 280px;
     height: 180px;
 }
